yaml/kc-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kc-vs
spec:
  hosts:
  - "*"
  gateways:
  - kc-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: keycloak
